--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,20 +1,16 @@
-<%= stylesheet_link_tag "sessions_form" %>
-<%= render "devise/shared/logoText"%>
-<div class="logInForm"> 
-<h2>Forgot your password?</h2>
+<h2><%= t('.forgot_your_password') %></h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= f.label :email, "Email:" %><br />
+    <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
-  <div>
-    <%= f.submit "Send me reset password instructions",class:"actions" %>
+  <div class="actions">
+    <%= f.submit t('.send_me_reset_password_instructions') %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
-</div>
