--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,98 +1,43 @@
-
-<%= stylesheet_link_tag "UserProfileEdit" %>
-<script >
-  function checkpassword(){
-    const valid = document.getElementById('passwordfield').value.length > 0
-    if (valid){
-      document.getElementById('submit').disabled = false;
-    }else{
-      document.getElementById('submit').disabled = true;
-    }
-  }
-  
-</script>
-<div id="UserProfileOverview">
-<h2 id="title">Edit Profile</h2>
+<h2><%= t('.title', resource: devise_i18n_fix_model_name_case(resource.model_name.human, i18n_key: 'registrations.edit.title')) %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
-  <div class="attributes">
-    <div class = "properties">
-      <div class="field">
-        <div class="interactive">
-          <%= f.label :"email:" %>
-          <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-        </div>
-      </div>
 
-      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-        <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-      <% end %>
-      <div class="field">
-        <div class="interactive">
-          <%= f.label :"current_password:" %> 
-          <!-- if we submitted an incorrect form, the already filled in fields should stay filled-->
-          <% if @account_params then %>
-            <%= f.password_field :current_password, autocomplete: "current-password", id:"passwordfield", value: @account_params[:current_password], onKeyup:"checkpassword()" %>
-          <%else%>
-            <%= f.password_field :current_password, autocomplete: "current-password", id:"passwordfield", onKeyup:"checkpassword()" %>
-          <%end%>
-        </div>
-        <i class="info"> (we need your current password to confirm your changes)</i>
-      </div>
-      <div id="passwordEdit">
-        <div class="field">
-          <div class="interactive">
-            <%= f.label :"password:" %> 
-            <%= f.password_field :password, autocomplete: "new-password",id:"newpssword" %>
-          </div>
-          <div class="info">
-            <i> (leave blank if you don't want to change it)  </i>
-          <% if @minimum_password_length %>
-           <em> (<%= @minimum_password_length %> characters minimum)</em>
-          <% end %>
-          </div>
-        </div>
-
-        <div class="field" id="confirmation">
-          <div class="interactive">
-            <%= f.label :"password_confirmation:" %>
-            <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-          </div>
-        </div>
-      </div>
-      </div>
-          <div id ="prof_pic">
-        <label for="user_profile_picture">
-          <% if current_user.profile_picture.attached? %>
-            <%= image_tag(current_user.profile_picture, id:"editProfPicImg") %>
-          <% else %>
-            <%= image_tag("/assets/empty-profile-picture.png", id:"editProfPicImg") %>
-          <% end %>
-          
-        </label>
-        <%= f.file_field  :profile_picture %>
-      </div>
+  <div class="field">
+    <%= f.label :email %><br />
+    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
+
+  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+    <div><%= t('.currently_waiting_confirmation_for_email', email: resource.unconfirmed_email) %></div>
+  <% end %>
+
+  <div class="field">
+    <%= f.label :password %> <i>(<%= t('.leave_blank_if_you_don_t_want_to_change_it') %>)</i><br />
+    <%= f.password_field :password, autocomplete: "new-password" %>
+    <% if @minimum_password_length %>
+      <br />
+      <em><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></em>
+    <% end %>
+  </div>
+
+  <div class="field">
+    <%= f.label :password_confirmation %><br />
+    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :current_password %> <i>(<%= t('.we_need_your_current_password_to_confirm_your_changes') %>)</i><br />
+    <%= f.password_field :current_password, autocomplete: "current-password" %>
+  </div>
+
   <div class="actions">
-    <%= f.submit "Update profile", disabled:"disabled",id:"submit" %>
+    <%= f.submit t('.update') %>
   </div>
 <% end %>
-<script>
-  const user_profile_picture = document.getElementById('user_profile_picture')
-  user_profile_picture.addEventListener("change", () => {
-      if (user_profile_picture.files.length == 1) {
-      imgupdate(user_profile_picture.files[0]);
-    }
-  }
 
-  )
-  function imgupdate(image){
-    document.getElementById('editProfPicImg').src = URL.createObjectURL(image)
-  }
-</script>
-<div id="cancel"> <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
+<h3><%= t('.cancel_my_account') %></h3>
 
-<div id="return"><button onclick="history.back()">Back</button></div>
-</div>
+<div><%= t('.unhappy') %> <%= button_to t('.cancel_my_account'), registration_path(resource_name), data: { confirm: t('.are_you_sure'), turbo_confirm: t('.are_you_sure') }, method: :delete %></div>
 
+<%= link_to t('devise.shared.links.back'), :back %>
